# DayTradeSelfOptAgent

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  batchanalyze.py  main.py  pyproject.toml  quick_batch.py  requirements.txt  sample_analyze.py  test_akshare.py
agents/: README.md  __init__.py  risk_mgmt.py  schemas.py  skill_loader.py  trader.py
config/: README.md  __init__.py  default_config.py
daily_reports/: 2026-06-23_daily_report.md  2026-06-24_daily_report.md  2026-06-25_daily_report.md  2026-06-26_daily_report.md  2026-06-29_daily_report.md  2026-07-01_daily_report.md  2026-07-02_daily_report.md  2026-07-05_daily_report.md  2026-07-07_daily_report.md  2026-07-08_daily_report.md  2026-07-09_daily_report.md  2026-07-10_daily_report.md  2026-07-13_daily_report.md  2026-07-14_daily_report.md  2026-07-15_daily_report.md  2026-07-18_daily_report.md  2026-07-21_daily_report.md
data/: README.md
dataflows/: README.md  __init__.py  akshare_adapter.py  direct_http.py  interface.py  market_cache.py
docs/: one_day_swing_strategy.md  skillopt_analysis.md  skillopt_evoskill_architecture.md  vibetrading_analysis.md
graph/: README.md  conditional_logic.py  setup.py  trading_graph.py
opinion/: README.md  __init__.py  sentiment_aggregator.py  xueqiu_monitor.py
opt/: aggregate.py  applier.py  collector.py  debate_logger.py  evolve.py  gate.py  optimizer.py  optimizer_prompt.md  run_pipeline.py  select.py  utils.py
scripts/: _backtest_0703_0707.py  _backtest_summary.py  _check_buys.py  _check_signal.py  _chk.py  _pnl.py  backfill_dates.py  backtest_0618.py  (+12 more)
(+30 files in other folders)
