[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "astock-agent"
version = "0.1.0"
description = "A股量化交易Agent：基于多Agent协作的数据驱动+舆论监控交易决策框架"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "akshare>=1.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "stockstats>=0.6.0",
]

[project.optional-dependencies]
tushare = ["tushare>=1.4.0"]
all = ["astock-agent[tushare]"]

[project.scripts]
astock = "main:main"

[tool.setuptools.packages.find]
include = ["agents*", "graph*", "dataflows*", "opinion*", "config*"]
